# OSiSP

./: .gitignore  README.md
Snitko_OSISP_prj_2024/: README.md  SysInfo.c  SysInfo.h  control.c  control.h  controlProcess.c  controlProcess.h  controlThreads.c  controlThreads.h  display.c  display.h  displayProcess.c  displayProcess.h  displayThreads.c  displayThreads.h  display_info.c  input.c  input_thread.c  main.c  manage_process.c  manage_thread.c  process.h  process_info.c  process_list.c  read.c  read.h  readProcess.c  readProcess.h  readThreads.c  readThreads.h  sort.c  sort.h  sortThreads.c  sortThreads.h  sysinfo.h  thread_info.c  thread_list.c  threads.h  updateProcess.c  updateProcess.h  (+3 more)
lab1/: dirwalk.c
lab2/: CMakeLists.txt  child.c  parent.c
lab3/: CMakeLists.txt  parent.c
lab4/: consumer.c  main.c  producer.c
lab5/: main.c
lab7/7-1/: CMakeLists.txt  l71
lab7/7-2/: l72  main.c
lab8/: client  querytest.txt  server  serverinfo.txt
